# cpp_web_ui

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  SPEC.md
.devcontainer/: devcontainer.json
cmake/: cpp_web_ui-config.cmake.in
csharp/MapServer/: MapServer.csproj  Program.cs  ShmPoller.cs  SymbolTable.cs  ViewshedComputer.cs
docs/: architecture.md  frontend.md  terrain_rgb.md
examples/: shm_writer.cpp  simple_usage.cpp
include/: shared_types.h
include/cpp_web_ui/: MapServer.hpp  ShmPublisher.hpp  ViewshedComputer.hpp
scripts/: color_table.txt  compute_viewshed.py  download_overlay_tiles.py  download_tiles.py  generate_all_tiles.sh  generate_terrain_rgb.py  generate_tiles.py
src/: MapServer.cpp  ShmPublisher.cpp  ViewshedComputer.cpp  map_server.cpp  shm_writer.cpp
web/: app.js  index.html  style.css
